# CUDA_Learnning

./: .gitignore  CMakeLists.txt  README.md  dir_conflicts.prej  tracker.7z
Detection/: CMakeLists.txt
Detection/include/: Detect.h  common.h  cuda_utils.h  yololayer.h
Detection/src/: Detect.cpp
cmake/: colors.cmake  include_guard.cmake  note.txt
include/: Detect.h  bounded_buffer.hpp  comon.h  cuda_utils.h  manager.hpp  preprocess.h
src/: Detect.cpp  main.cpp  manager.cpp  preprocess.cu
test/: CMakeLists.txt  kernels.cu  kernels.cuh  test.cpp
tracker/: CMakeLists.txt
